[gd_scene load_steps=4 format=3 uid="uid://ckna26535hbgo"]

[ext_resource type="Script" path="res://scenes/player/playerBullet.gd" id="1_0le0p"]
[ext_resource type="Texture2D" uid="uid://o5x24ko07ebq" path="res://scenes/player/PlayerBullet1.png" id="2_4yq0g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tc0x2"]
size = Vector2(17, 10)

[node name="playerBullet" type="Area2D"]
scale = Vector2(0.6, 0.6)
collision_layer = 8
collision_mask = 46
script = ExtResource("1_0le0p")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_4yq0g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-2.5, 0)
shape = SubResource("RectangleShape2D_tc0x2")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
